--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -34,7 +34,7 @@
         </div>
         <div class="logo">
             <a href="#">
-                <img src="images/logo.png">
+                <img alt="@SiteOptions.Value.AppName" src="~/images/logo.png">
                 <h2 class="logo-title">@SiteOptions.Value.AppName</h2>
                 <p class="logo-text">@SiteOptions.Value.Subheading</p>
             </a>
