--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
@@ -12,5 +12,6 @@
 @using Dotnet9.Web.ViewModel.Albums
 @using Dotnet9.Web.ViewModels.Home
 @using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Dotnet9.Web.ViewModels.Sides
 @namespace Dotnet9.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
