--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Albums/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Albums/Index.cshtml
@@ -6,47 +6,29 @@
     ViewData["Title"] = "专辑";
 }
 
-<h1 class="category-title">专辑：@Model.AlbumName</h1>
+<div class="pics-list-box whitebg">
 
-<ul class="post-box">
-    @if (Model.BlogPosts?.Any() == false)
-    {
-        <span>没有数据哦</span>
-    }
-    else
-    {
-        @foreach (var blogPost in Model.BlogPosts!)
+    <div class="news-title">
+        <span class="weizhi">联系请关注微信公众号：Dotnet9</span>
+        <h2>@Model.AlbumName</h2>
+    </div>
+    <ul>
+        @if (Model.BlogPosts != null && Model.BlogPosts.Any())
         {
-            <li class="post-label">
-                <a href="@blogPost.CreationTime.ToString("/yyyy/dd")/@blogPost.Slug">
-                    <h2>@blogPost.Title</h2>
-                </a>
-                <p>@blogPost.Description</p>
-                <div class="post-action">
-                    <span>
-                        <i class="iconfont icon-yonghu"></i>
-                        &nbsp; @(blogPost.Original.IsNullOrWhiteSpace() ? SiteOptions.Value.Owner : blogPost.Original)
-                    </span>
-                    <span>
-                        <i class="iconfont icon-wenjianjia"></i>
-                        &nbsp;
-                        @foreach (var cat in blogPost.Categories)
-                        {
-                            <a href="/cat/@cat.Slug" title="@cat.Description">@cat.Name</a>
-                        }
-                    </span>
-                    <span>
-                        <i class="iconfont icon-riqi"></i>
-                        &nbsp;@blogPost.CreationTime.ToString("yyyy-MM-dd")
-                    </span>
-                    <span>
-                        <i class="iconfont icon-yanjing"></i>
-                        &nbsp;@blogPost.ViewCount
-                    </span>
-                </div>
-            </li>
+            @foreach (var item in Model.BlogPosts)
+            {
+                <li>
+                    <a href="/@item.CreationTime.ToString("yyyy/MM")/@item.Slug">
+                        <i>
+                            <img src="@item.Cover" alt="@item.Title">
+                        </i>
+                        <h2>@item.Title</h2>
+                        <p>@item.Description</p>
+                    </a>
+                </li>
+            }
         }
-    }
-</ul>
+    </ul>
 
-@await Html.PartialAsync("_PaginationPartial", new PaginationModel(Model.Current, Model.Pages, Model.Total, Model.PageSize, Model.PageCount))
+    @await Html.PartialAsync("_PaginationPartial", new PaginationModel(Model.Current, Model.Pages, Model.Total, Model.PageSize, Model.PageCount))
+</div>
