--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Archives/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Archives/Index.cshtml
@@ -2,73 +2,44 @@
 @model IndexModel
 @inject IOptionsSnapshot<SiteOptions> SiteOptions
 @{
-    Layout = "_SimpleLayout";
     ViewData["Title"] = "归档";
 }
 
-@section Headers{
-    <link rel="stylesheet" href="/css/detail.css"/>
-    @if (SiteOptions.Value.Valine)
-    {
-        <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
-    }
-}
 
-<div class="detail">
-    <div class="detail-left">
-
-        @if (Model.BlogPosts is {Count:>0})
-        {
-            <ul class="pige-content">
-                @foreach (var groupMonth in Model.BlogPosts.GroupBy(x => x.CreationTime.ToString("yyyy年MM月")).OrderBy(x => x.Key))
-                {
-                    <li class="pige-box">
-                        <h2 class="pige-month iconfont icon-wenjianjia">&nbsp;@groupMonth.Key</h2>
-                        <ol class="pige-wrap">
-                            @foreach (var blogPost in groupMonth.OrderByDescending(x => x.CreationTime))
-                            {
-                                <li class="pige-label">
-                                    <span class="iconfont icon-riqi">
-                                        &nbsp;@blogPost.CreationTime.ToString("yyyy-MM-dd HH:mm:ss")
-                                    </span
-                                    >
-                                    <a href="/@blogPost.CreationTime.ToString("yyyy/MM")/@blogPost.Slug" target="_blank">@blogPost.Title</a>
-                                </li>
-                            }
-                        </ol>
-                    </li>
-                }
-            </ul>
-        }
-
-        @if (SiteOptions.Value.Valine)
-        {
-            <div class="gap-solid vcomments-gap"></div>
-            <div id="vcomments" class="vcomments"></div>
-            <div class="vcomments-copyright">评论由Valine提供支持</div>
-        }
-    </div>
-    <div class="detail-right">
-        <div class="toc-card">
-            <h1 class="toc-card-list">目录</h1>
-            <div class="toc-box" id="toc-box"></div>
-        </div>
-    </div>
-</div>
-
-<div class="zoom-prev">
-    <div class="zoom-container"></div>
-</div>
-
-@if (SiteOptions.Value.Valine)
+@if (Model.BlogPosts is {Count:>0})
 {
-    <script>
-        new Valine({
-            el: "#vcomments",
-            appId: "@SiteOptions.Value.ValineConfig!.AppId",
-            appKey: "@SiteOptions.Value.ValineConfig.AppKey",
-            serverURLs: "@SiteOptions.Value.ValineConfig.ServerURL",
-            placeholder: "@SiteOptions.Value.ValineConfig.Placeholder"
-        });
-    </script>
+@section Headers{
+    <link rel="stylesheet" href="~/css/blogpost.css"/>
+}
+    <div id="nice">
+        <ul>
+            @foreach (var groupYear in Model.BlogPosts.GroupBy(x => x.CreationTime.ToString("yyyy年")).OrderByDescending(x => x.Key))
+            {
+                <li>
+                    <h2>@groupYear.Key</h2>
+                    <ul>
+                        @foreach (var groupMonth in groupYear.GroupBy(x => x.CreationTime.ToString("yyyy年MM月")).OrderByDescending(x => x.Key))
+                        {
+                            <li>
+                                <h3>@groupMonth.Key</h3>
+                                <ol>
+                                    @foreach (var blogPost in groupMonth.OrderByDescending(x => x.CreationTime))
+                                    {
+                                        <li>
+                                            <h4 class="mt-0 mb-1 font-16">
+                                                <a style="color: #262626;" href="/@blogPost.CreationTime.ToString("yyyy/MM")/@blogPost.Slug">@blogPost.Title</a>
+                                            </h4>
+                                            <p class="text-muted">
+                                                ---<small>@blogPost.CreationTime.ToString("yyyy年MM月dd日 hh:mm:ss")</small>
+                                            </p>
+                                        </li>
+                                    }
+                                </ol>
+                            </li>
+                        }
+                    </ul>
+                </li>
+            }
+        </ul>
+    </div>
 }
