--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Timelines/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Timelines/Index.cshtml
@@ -2,67 +2,32 @@
 @model IndexModel
 @inject IOptionsSnapshot<SiteOptions> SiteOptions
 @{
-    Layout = "_SimpleLayout";
-    ViewData["Title"] = "时间线";
+    ViewData["Title"] = "时间轴";
 }
 
 @section Headers{
-    <link rel="stylesheet" href="/css/timeline.css"/>
-    @if (SiteOptions.Value.Valine)
+    <link rel="stylesheet" href="/css/blogpost.css"/>
+}
+
+<div id="nice">
+    
+    <h1>时间轴</h1>
+    <p>记录网站的成长</p>
+
+    @if (Model.Timelines != null)
     {
-        <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
+        @foreach (var groupYearAndMonth in Model.Timelines.GroupBy(x => x.Time.ToString("yyyy年MM月")).OrderByDescending(x => x.Key))
+        {
+            <h2 class="m-0 time-show-name">@groupYearAndMonth.Key</h2>
+            @foreach (var timeline in groupYearAndMonth)
+            {
+                <div>
+                    <h3 class="mt-0 mb-1 font-16">@timeline.Title</h3>
+                    <p>@timeline.Content</p>
+                    ---<small>@timeline.Time.ToString("yyyy年MM月dd日")</small>
+                </div>
+            }
+        }
     }
-}
 
-<div class="detail">
-    <div class="detail-left">
-        
-        @if (Model.Timelines is {Count:>0})
-        {
-            <ul class="timeline">
-                @for (var i = 0; i < Model.Timelines.Count; i++)
-                {
-                    <li>
-                        <div class="direction-@(i%2==0?"l":"r")">
-                            <div class="flag-wrapper">
-                                <span class="hexa"></span>
-                                <span class="flag">@Model.Timelines[i].Title</span>
-                                <span class="time-wrapper"><span class="time">@Model.Timelines[i].Time.ToString("yyyy-MM-dd")</span></span>
-                            </div>
-                            <div class="desc">@Model.Timelines[i].Content</div>
-                        </div>
-                    </li>
-                }
-            </ul>
-        }
-
-        @if (SiteOptions.Value.Valine)
-        {
-            <div class="gap-solid vcomments-gap"></div>
-            <div id="vcomments" class="vcomments"></div>
-            <div class="vcomments-copyright">评论由Valine提供支持</div>
-        }
-    </div>
-    <div class="detail-right">
-        <div class="toc-card">
-            <h1 class="toc-card-list">目录</h1>
-            <div class="toc-box" id="toc-box"></div>
-        </div>
-    </div>
 </div>
-
-<div class="zoom-prev">
-    <div class="zoom-container"></div>
-</div>
-@if (SiteOptions.Value.Valine)
-{
-    <script>
-        new Valine({
-            el: "#vcomments",
-            appId: "@SiteOptions.Value.ValineConfig!.AppId",
-            appKey: "@SiteOptions.Value.ValineConfig.AppKey",
-            serverURLs: "@SiteOptions.Value.ValineConfig.ServerURL",
-            placeholder: "@SiteOptions.Value.ValineConfig.Placeholder"
-        });
-    </script>
-}
