--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
@@ -13,5 +13,6 @@
 @using Dotnet9.Web.ViewModels.Home
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Dotnet9.Web.ViewModels.Sides
+@using Dotnet9.Web.ViewModel.Commons
 @namespace Dotnet9.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
