--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -22,8 +22,8 @@
 
     <div class="logo-section box">
         <div class="search">
-            <form action="/e/search/index.php" method="post" name="searchform" id="searchform">
-                <input name="keyboard" id="keyboard" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);"
+            <form action="/q" method="get" name="searchform" id="searchform">
+                <input name="keywords" id="keywords" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);"
                        onfocus="if(value=='请输入关键字词'){this.style.color='#000';value=''}"
                        onblur="if(value==''){this.style.color='#999';value='请输入关键字词'}" type="text">
                 <input name="show" value="title" type="hidden">
@@ -135,8 +135,8 @@
     <div class="search-page">
         <div class="go-left"></div>
         <div class="search">
-            <form action="/e/search/index.php" method="post" name="searchform" id="searchform">
-                <input name="keyboard" id="keyboard" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);"
+            <form action="/q" method="get" name="searchform" id="searchform">
+                <input name="keywords" id="keywords" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);"
                        onfocus="if(value=='请输入关键字词'){this.style.color='#000';value=''}"
                        onblur="if(value==''){this.style.color='#999';value='请输入关键字词'}" type="text">
                 <input name="show" value="title" type="hidden">
@@ -150,34 +150,16 @@
             <p>热门搜索排行</p>
             <ul class="search-paihang">
                 <li>
-                    <a href="/"><i>1</i>帝国</a>
+                    <a href="/q?keyword='WPF'"><i>1</i>WPF</a>
                 </li>
                 <li>
-                    <a href="/"><i>2</i>模板</a>
+                    <a href="/q?keyword='Winform'"><i>2</i>Winform</a>
                 </li>
                 <li>
-                    <a href="/"><i>3</i>博客</a>
+                    <a href="/q?keyword='MAUI'"><i>3</i>MAUI</a>
                 </li>
                 <li>
-                    <a href="/"><i>4</i>后台</a>
-                </li>
-                <li>
-                    <a href="/"><i>5</i>html</a>
-                </li>
-                <li>
-                    <a href="/"><i>6</i>绅士</a>
-                </li>
-                <li>
-                    <a href="/"><i>7</i>cms</a>
-                </li>
-                <li>
-                    <a href="/"><i>8</i>支持</a>
-                </li>
-                <li>
-                    <a href="/"><i>9</i>早安</a>
-                </li>
-                <li>
-                    <a href="/"><i>10</i>个人</a>
+                    <a href="/q?keyword='vue'"><i>4</i>vue 3.0</a>
                 </li>
             </ul>
         </div>
@@ -185,34 +167,16 @@
             <p>最新搜索排行</p>
             <ul class="search-paihang">
                 <li>
-                    <a href=""><i>1</i>函数</a>
+                    <a href="/q?keyword='WPF'"><i>1</i>WPF</a>
                 </li>
                 <li>
-                    <a href="/"><i>2</i>博客程序</a>
+                    <a href="/q?keyword='Winform'"><i>2</i>Winform</a>
                 </li>
                 <li>
-                    <a href="/"><i>3</i>解析</a>
+                    <a href="/q?keyword='MAUI'"><i>3</i>MAUI</a>
                 </li>
                 <li>
-                    <a href="/"><i>4</i>红色</a>
-                </li>
-                <li>
-                    <a href="/"><i>5</i>告别2018</a>
-                </li>
-                <li>
-                    <a href="/"><i>6</i>插件</a>
-                </li>
-                <li>
-                    <a href="/"><i>7</i>网页布局</a>
-                </li>
-                <li>
-                    <a href="/"><i>8</i>云服务器</a>
-                </li>
-                <li>
-                    <a href="/"><i>9</i>with love for you</a>
-                </li>
-                <li>
-                    <a href="/"><i>10</i>评论插件</a>
+                    <a href="/q?keyword='vue'"><i>4</i>vue 3.0</a>
                 </li>
             </ul>
         </div>
