--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -22,8 +22,8 @@
 
     <div class="logo-section box">
         <div class="search">
-            <form action="/q" method="get" name="searchform" id="searchform">
-                <input name="keywords" id="keywords" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);"
+            <form action="/q" method="get" name="searchform">
+                <input name="keywords" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);"
                        onfocus="if(value=='请输入关键字词'){this.style.color='#000';value=''}"
                        onblur="if(value==''){this.style.color='#999';value='请输入关键字词'}" type="text">
                 <input name="show" value="title" type="hidden">
@@ -135,8 +135,8 @@
     <div class="search-page">
         <div class="go-left"></div>
         <div class="search">
-            <form action="/q" method="get" name="searchform" id="searchform">
-                <input name="keywords" id="keywords" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);"
+            <form action="/q" method="get" name="searchform">
+                <input name="keywords" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);"
                        onfocus="if(value=='请输入关键字词'){this.style.color='#000';value=''}"
                        onblur="if(value==''){this.style.color='#999';value='请输入关键字词'}" type="text">
                 <input name="show" value="title" type="hidden">
