--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
@@ -12,13 +12,19 @@
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_TuiJianNewsPartial")
 <div class="clear blank"></div>
+@await Html.PartialAsync("Ads/_DiaplayPartial")
+<div class="clear blank"></div>
 @await Html.PartialAsync("Home/_PicturePartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_NewsPartial")
 <div class="clear blank"></div>
+@await Html.PartialAsync("Ads/_DiaplayPartial")
+<div class="clear blank"></div>
 @await Html.PartialAsync("Home/_VideosPartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_WenZiPartial")
+<div class="clear blank"></div>
+@await Html.PartialAsync("Ads/_DiaplayPartial")
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_ToolsPartial")
 <div class="clear blank"></div>
