--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/wwwroot/css/blogpost.css
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/wwwroot/css/blogpost.css
@@ -303,3 +303,20 @@
     margin-right: 0.25em;
     vertical-align: -0.4em;
 }
+
+.vcomments {
+    padding: 20px;
+}
+
+.vcomments-gap {
+    margin-top: 30px;
+}
+
+.vcomments-copyright {
+    width: 100%;
+    text-align: right;
+    padding: 20px;
+    box-sizing: border-box;
+    color: #999;
+    font-size: 12px;
+}
