--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
@@ -14,5 +14,7 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Dotnet9.Web.ViewModels.Sides
 @using Dotnet9.Web.ViewModel.Commons
+@using Dotnet9.WebAPI.ViewModel.Comments
+@using Dotnet9.Web.ViewModels.Comments
 @namespace Dotnet9.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
